states files updated

--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -14,7 +14,7 @@
           {% endfor %}
         </ul>
       {% endfor %}
-      {% if state is not defined not_found %}
+      {% if state is not defined %}
       <h1>Not found!</h1>
       {% endif %}
     </ul>
